# api/src/types/index.ts
@@ -11,3 +11,4 @@ export * from './migration';
 export * from './revision';
 export * from './services';
 export * from './snapshot';
+export * from './webhooks';
